syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.leaf.common.grpc";
option java_outer_classname = "AuthProto";
import "google/protobuf/timestamp.proto";
import "Common.proto";

service AuthGrpcService {
  rpc verifyToken (VerifyTokenRequest) returns (VerifyTokenResponse);
  rpc verifyEmailToken (VerifyEmailTokenDTO) returns (VerifyEmailTokenDTO);
  rpc authMe (AuthMeRequest) returns (AuthMeResponse);
}

message VerifyTokenRequest {
  string token = 1;
}

message VerifyTokenResponse {
  bool valid = 1;
}

message VerifyEmailTokenDTO {
  string username = 1;
  string fullname = 2;
  string email = 3;
  google.protobuf.Timestamp expiredAt = 4;
  string jti = 5;
}

message AuthMeRequest {
  string userId = 1;
}

message AuthMeResponse {
  string username = 1;
  string email = 2;
  bool isGlobal = 3;
  repeated string roles = 4;
  repeated string roleLabels = 5;
  repeated string permissions = 6;
  string secretKey = 7;
  string channel = 8;
}